--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -25,8 +25,8 @@ jobs:
     strategy:
       matrix:
         go-version:  # Note: Go only supports 2 versions: https://go.dev/doc/devel/release#policy
-          - "1.18"
           - "1.19"
+          - "1.20"
 
     steps:
       - uses: actions/checkout@v3
@@ -51,8 +51,8 @@ jobs:
     strategy:
       matrix:
         go-version:  # Note: Go only supports 2 versions: https://go.dev/doc/devel/release#policy
-          - "1.18"
           - "1.19"
+          - "1.20"
 
     steps:
       - uses: actions/checkout@v3
@@ -73,7 +73,7 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.19
+          go-version: "1.20"
           cache: true
 
       - run: make snapshot
