--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -19,14 +19,17 @@ on:
   # See https://docs.github.com/en/free-pro-team@latest/actions/managing-workflow-runs/manually-running-a-workflow
   workflow_dispatch:
 
+env:  # Update this prior to requiring a higher minor version in go.mod
+  GO_VERSION: "1.20"  # 1.xx == latest patch of 1.xx
+
 jobs:
   check:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        go-version:  # Note: Go only supports 2 versions: https://go.dev/doc/devel/release#policy
-          - "1.19"
-          - "1.20"
+        go-version:  # Hard code as we can't use template variables in a matrix
+          - "1.19"  # Go only supports 2 versions
+          - "1.20"  # match env.GO_VERSION
 
     steps:
       - uses: actions/checkout@v3
@@ -50,9 +53,9 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        go-version:  # Note: Go only supports 2 versions: https://go.dev/doc/devel/release#policy
-          - "1.19"
-          - "1.20"
+        go-version:  # Hard code as we can't use template variables in a matrix
+          - "1.19"  # Go only supports 2 versions
+          - "1.20"  # match env.GO_VERSION
 
     steps:
       - uses: actions/checkout@v3
@@ -64,6 +67,7 @@ jobs:
 
       - run: make test
 
+  # Ensure ghcr.io/http-wasm/http-wasm-tck builds on PR, and push it when not.
   snapshot:
     runs-on: ubuntu-22.04
     needs: [check, test]
@@ -73,7 +77,7 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: "1.20"
+          go-version: ${{ env.GO_VERSION }}
           cache: true
 
       - run: make snapshot
